# ai-research-agent

./: .gitignore  README.md  main.py  pyproject.toml
routers/: __init__.py  research.py
schemas/: __init__.py  research.py
services/: agent.py  tools.py
